fix: filter items align and mage-icon -v for cache

--- a/assets/frontend/filter_pagination.css
+++ b/assets/frontend/filter_pagination.css
@@ -24,7 +24,6 @@ div.filter_item {
 div.ttbm_top_filter {margin: 0 0 var(--dmp) 0;}
 div.ttbm_top_filter .dButton,
 div.ttbm_top_filter label {margin:10px 5px;font-weight: var(--fw-bold);}
-div.ttbm_top_filter > :last-child {margin: var(--dmp) 0 0 0;}
 div.ttbm_top_filter .formControl { border-radius: 0;min-width: 200px; font-weight: var(--fw-medium);}
 /*div.ttbm_top_filter .formControl:focus {background-color: var(--color_theme_cc);}*/
 div.ttbm_top_filter .formControl::placeholder {color: var(--color_theme_alter);}
